--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('');
 
 :root {
+  /* Colori provvisori */
+  --nav-colors:#1B98E0;
   /*Scala di Grigi*/
   --extra-light-gray: #f8f9faff;
   --soft-light-gray: #f2f2f3;
@@ -10,7 +12,7 @@
   --dark-gray: #6c757dff;
   --extra-dark-gray: #343a40ff;
   /* Global */
-  --letter-spacing: 0.08rem;
+  --letter-spacing: 0.05rem;
   --transition: all 0.2s ease;
   --btn-transition: all 0.125s ease;
   --radius: 0.25rem;
@@ -42,8 +44,8 @@ body {
 
 /* Dark mode */
 
-.light-mode {
-  --nav-colors-2: white;
+/* .light-mode {
+  --nav-colors:#1B98E0 ;
   --text-color: white;
   --btn-up: white;
   --input-back:white;
@@ -62,7 +64,7 @@ body {
   --pallino:black;
   --button-input:black;
   --background-card:black;
-}
+} */
 
 
 
@@ -195,7 +197,7 @@ NAV STYLE
 */
 
 .nav {
-  background-color: blue;
+  background-color: var(--nav-colors);
   height: 4rem;
   box-shadow: var(--light-shadow);
   display: flex;
@@ -282,11 +284,11 @@ NAV STYLE MEDIA QUERY
 
 @media screen and (min-width: 992px) {
   .nav {
-    -moz-justify-content: space-around;
-    -webkit-justify-content: space-around;
-    -ms-justify-content: space-around;
-    justify-content: space-around;
-    height: 5rem;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    -ms-justify-content: space-between;
+    justify-content: space-between;
+    height: 4rem;
   }
 
   .container {
