--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-@import url('');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Scribble&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Lilita+One&family=Permanent+Marker&family=Rubik+Scribble&display=swap');
 
 :root {
   /* Colori provvisori */
-  --nav-colors:#1B98E0;
+  --nav-colors:transparent;
   /*Scala di Grigi*/
   --extra-light-gray: #f8f9faff;
   --soft-light-gray: #f2f2f3;
@@ -32,12 +33,12 @@
 }
 
 body {
-  background-color: black;
-  color: white;
+  background-color: #F8FFF4;
+  color: black;
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Madimi One", sans-serif;
+  font-family: "Permanent Marker", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -195,6 +196,12 @@ p {
 NAV STYLE
 ====================
 */
+
+.rubik-scribble-regular {
+  font-family: "Rubik Scribble", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .nav {
   background-color: var(--nav-colors);
