--- a/src/index.css
+++ b/src/index.css
@@ -577,6 +577,26 @@ END SIDEBAR STYLE
 /* STYLE CARD */
 
 
+.position-card {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: repeat(4, 2fr);
+  gap: 60px;
+}
+
+@media screen and (max-width: 768px) {
+  .position-card {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .position-card {
+    grid-template-columns: 1fr;
+  }
+}
+
 .card {
   --font-color: #323232;
   --font-color-sub: #666;
@@ -597,20 +617,20 @@ END SIDEBAR STYLE
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.card:last-child {
+/* .card:last-child {
   justify-content: flex-end;
-}
+} */
 
-.card-img {
+/* .card-img { */
     /* clear and add new css */
-  transition: all 0.5s;
+  /* transition: all 0.5s;
   display: flex;
   justify-content: center;
-}
+} */
 
-.card-img .img {
+/* .card-img .img { */
  /* delete */
-  transform: scale(1);
+  /* transform: scale(1);
   position: relative;
   box-sizing: border-box;
   width: 100px;
@@ -620,11 +640,11 @@ END SIDEBAR STYLE
   border: 2px solid black;
   background-color: #228b22;
   background-image: linear-gradient(to top,transparent 10px,rgba(0,0,0,0.3) 10px,rgba(0,0,0,0.3) 13px,transparent 13px);
-}
+} */
 
-.card-img .img::before {
+/* .card-img .img::before { */
  /* delete */
-  content: '';
+  /* content: '';
   position: absolute;
   width: 65px;
   height: 110px;
@@ -637,11 +657,11 @@ END SIDEBAR STYLE
   background-position: center 3px,center bottom,center bottom,center bottom,center bottom;
   border-radius: 0 0 4px 4px;
   z-index: 2;
-}
+} */
 
-.card-img .img::after {
+/* .card-img .img::after { */
  /* delete */
-  content: '';
+  /* content: '';
   position: absolute;
   box-sizing: border-box;
   width: 28px;
@@ -661,7 +681,7 @@ END SIDEBAR STYLE
   border-left: 2px solid black;
   transform: rotate(45deg);
   z-index: 1;
-}
+} */
 
 .card-title {
   font-size: 20px;
@@ -717,11 +737,11 @@ END SIDEBAR STYLE
   transition: all 0.3s;
 }
 
-.card-img:hover {
+/* .card-img:hover {
   transform: translateY(-3px);
-}
+} */
 
-.card-btn:hover {
+/* .card-btn:hover {
   border: 2px solid var(--main-focus);
 }
 
@@ -731,6 +751,6 @@ END SIDEBAR STYLE
 
 .card-btn:active {
   transform: translateY(3px);
-}
+} */
 
 
