--- a/src/index.css
+++ b/src/index.css
@@ -815,6 +815,13 @@ END SIDEBAR STYLE
   margin-bottom: 24px;
 }
 
+@media screen and (max-width: 768px) {
+  .bg-1{
+    height: 90px;
+    width: 90px;
+  }
+}
+
 
 .bg-2{
   background: url(./assets/image/geolier.jpg);
@@ -827,6 +834,13 @@ END SIDEBAR STYLE
   margin-bottom: 24px;
 }
 
+@media screen and (max-width: 768px) {
+  .bg-2{
+    height: 90px;
+    width: 90px;
+  }
+}
+
 .bg-3{
   background: url(./assets/image/rosevillain.jpg);
   background-position: center;
@@ -837,5 +851,29 @@ END SIDEBAR STYLE
   border-radius: 80px;
   margin-bottom: 24px;
 }
+
+@media screen and (max-width: 768px) {
+  .bg-3{
+    height: 90px;
+    width: 90px;
+  }
+}
+
+.posizioni{
+  margin-top: 170px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+
+@media screen and (max-width: 768px) {
+  .posizioni{
+    margin-top: 89px;
+    margin-left: 5px;
+  }
+}
+
+
+
 
 
