--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,12 @@ p {
   font-size: 0.9rem;
   letter-spacing: var(--letter-spacing);
 }
+
+li{
+  color: var(--text-color);
+  font-size: 0.9rem;
+  letter-spacing: var(--letter-spacing);
+}
 @media screen and (min-width: 753px) {
   h1 {
     font-size: 4rem;
@@ -1125,3 +1131,88 @@ END SIDEBAR STYLE
   }
 }
 
+
+/* FOOTER STYLE */
+
+footer{
+  background: linear-gradient(var(--background),orange);
+}
+.footerContainer{
+  width: 100%;
+  padding: 70px 20px 20px ;
+  padding-top: 46px;
+}
+.socialIcons{
+  display: flex;
+  justify-content: center;
+}
+.socialIcons a{
+  text-decoration: none;
+  border: 2px solid black;
+  padding:  10px;
+  background-color: white;
+  margin: 20px;
+  border-radius: 25px;
+}
+.socialIcons a i{
+  font-size: 2em;
+  opacity: 0,9;
+}
+/* Hover affect on social media icon */
+.socialIcons a:hover{
+  background-color: var(--button-form);
+  transition: 0.5s;
+}
+.socialIcons a:hover i{
+  color: white;
+  transition: 0.5s;
+}
+.footerNav{
+  margin: 30px 0;
+}
+.footerNav ul{
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+.footerNav ul li a{
+  color:white;
+  margin: 20px;
+  text-decoration: none;
+  font-size: 1.3em;
+  opacity: 0.7;
+  transition: 0.5s;
+
+}
+.footerNav ul li a:hover{
+  opacity: 1;
+}
+.footerBottom{
+  background:linear-gradient(#fdb936);
+  padding: 20px;
+  text-align: center;
+}
+.footerBottom p{
+  color: white;
+}
+.designer{
+  opacity: 0.7;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0px 5px;
+}
+@media (max-width: 700px){
+  .footerNav ul{
+      flex-direction: column;
+  } 
+  .footerNav ul li{
+      width:100%;
+      text-align: center;
+      margin: 10px;
+  }
+  .socialIcons a{
+      padding: 8px;
+      margin: 4px;
+  }
+}
